# ML_Zoomcamp_25

./: Dockerfile  HW1.ipynb  HW2.ipynb  README.md  notebook.ipynb  predict.py  pyproject.toml  test.py  train.py
data/: data_source.txt  testing_data.csv
